rename function `createTree()` as `asMuiTree()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(RichTreeView)
 export(SimpleTreeView)
 export(TreeItem)
 export(TreeItemIcon)
-export(createTree)
+export(asMuiTree)
 export(muiTreeDependency)
 export(reactOutput)
 export(renderReact)
