--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: muiTreeView
 Type: Package
 Title: 'MUI X Tree View' for 'shiny' Apps and 'Quarto'
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: 
     c(
       person(given = "Felix", family = "Luginbuhl", role = c("aut", "cre"), email = "felix.luginbuhl@protonmail.ch"),
@@ -18,9 +18,12 @@ Imports:
     htmltools,
     shiny.react (>= 0.4.0)
 Suggests: 
+    knitr,
+    rmarkdown,
     shiny,
     testthat (>= 3.0.0)
 RoxygenNote: 7.3.2
 URL: https://felixluginbuhl.com/muiTreeView
 BugReports: https://github.com/lgnbhl/muiTreeView/issues
 Config/testthat/edition: 3
+VignetteBuilder: knitr
