--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,6 +14,8 @@ navbar:
   left:
   - text: Home
     href: index.html
+  - text: Get started
+    href: articles/introduction.html
   - text: Reference
     href: reference/index.html
   - text: News
