--- a/js/package.json
+++ b/js/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.4",
-    "@mui/x-tree-view": "^8.16.0",
+    "@mui/material": "7.3.5",
+    "@mui/x-tree-view": "8.19.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -23,7 +23,7 @@
     "css-loader": "^7.1.2",
     "eslint": "^9.12.0",
     "style-loader": "^4.0.0",
-    "webpack": "^5.102.1",
+    "webpack": "^5.103.0",
     "webpack-cli": "^6.0.1"
   }
 }
