--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(SimpleTreeView)
 export(TreeItem)
 export(TreeItemIcon)
 export(asMuiTree)
-export(muiTreeDependency)
+export(muiTreeViewDependency)
 export(reactOutput)
 export(renderReact)
 export(setInput)
