Disable updates for React version 18.3.1 given shiny.react dep to react 18

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,12 @@
     "config:recommended",
     "group:allNonMajor",
     "schedule:monthly"
+  ],
+  "packageRules": [
+    {
+      "matchPackagePrefixes": ["react"],
+      "matchCurrentVersion": ^18.3.1
+      "enabled": false
+    }
   ]
 }
