--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
   "packageRules": [
     {
       "matchPackagePrefixes": ["react"],
-      "matchCurrentVersion": ^18.3.1
+      "matchCurrentVersion": "^18.3.1"
       "enabled": false
     }
   ]
