--- a/js/package.json
+++ b/js/package.json
@@ -11,6 +11,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
+  "resolutions": {
+    "react-is": "^18.3.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/eslint-parser": "^7.25.8",
